--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -89,18 +89,18 @@
                     <div class="col-sm-6 col-md-3">
                         <h2>Discover</h2>
                         <ul class="discover triangle hover row">
-                            <li class="col-xs-6"><a href="#">Safety</a></li>
-                            <li class="col-xs-6"><a href="#">About</a></li>
-                            <li class="col-xs-6"><a href="#">Travelo Picks</a></li>
-                            <li class="col-xs-6"><a href="#">Latest Jobs</a></li>
-                            <li class="active col-xs-6"><a href="#">Mobile</a></li>
-                            <li class="col-xs-6"><a href="#">Press Releases</a></li>
-                            <li class="col-xs-6"><a href="#">Why Host</a></li>
-                            <li class="col-xs-6"><a href="#">Blog Posts</a></li>
-                            <li class="col-xs-6"><a href="#">Social Connect</a></li>
-                            <li class="col-xs-6"><a href="#">Help Topics</a></li>
-                            <li class="col-xs-6"><a href="#">Site Map</a></li>
-                            <li class="col-xs-6"><a href="#">Policies</a></li>
+                            <li class="col-xs-6"><a  >Safety</a></li>
+                            <li class="col-xs-6"><a  >About</a></li>
+                            <li class="col-xs-6"><a  >Travelo Picks</a></li>
+                            <li class="col-xs-6"><a  >Latest Jobs</a></li>
+                            <li class="active col-xs-6"><a  >Mobile</a></li>
+                            <li class="col-xs-6"><a  >Press Releases</a></li>
+                            <li class="col-xs-6"><a  >Why Host</a></li>
+                            <li class="col-xs-6"><a  >Blog Posts</a></li>
+                            <li class="col-xs-6"><a  >Social Connect</a></li>
+                            <li class="col-xs-6"><a  >Help Topics</a></li>
+                            <li class="col-xs-6"><a  >Site Map</a></li>
+                            <li class="col-xs-6"><a  >Policies</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6 col-md-3">
@@ -108,24 +108,24 @@
                         <ul class="travel-news">
                             <li>
                                 <div class="thumb">
-                                    <a href="#">
+                                    <a  >
                                         <img src="http://placehold.it/63x63" alt="" width="63" height="63" />
                                     </a>
                                 </div>
                                 <div class="description">
-                                    <h5 class="s-title"><a href="#">Amazing Places</a></h5>
+                                    <h5 class="s-title"><a  >Amazing Places</a></h5>
                                     <p>Purus ac congue arcu cursus ut vitae pulvinar massaidp.</p>
                                     <span class="date">25 Sep, 2013</span>
                                 </div>
                             </li>
                             <li>
                                 <div class="thumb">
-                                    <a href="#">
+                                    <a  >
                                         <img src="http://placehold.it/63x63" alt="" width="63" height="63" />
                                     </a>
                                 </div>
                                 <div class="description">
-                                    <h5 class="s-title"><a href="#">Travel Insurance</a></h5>
+                                    <h5 class="s-title"><a  >Travel Insurance</a></h5>
                                     <p>Purus ac congue arcu cursus ut vitae pulvinar massaidp.</p>
                                     <span class="date">24 Sep, 2013</span>
                                 </div>
@@ -149,7 +149,7 @@
                         <address class="contact-details">
                             <span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-HELLO</span>
                             <br />
-                            <a href="#" class="contact-email">help@travelo.com</a>
+                            <a   class="contact-email">help@travelo.com</a>
                         </address>
                         <ul class="social-icons clearfix">
                             <li class="twitter"><a title="twitter"  ><i class="soap-icon-twitter"></i></a></li>
@@ -167,15 +167,15 @@
         <div class="bottom gray-area">
             <div class="container">
                 <div class="logo pull-left">
-                    <a href="index.html" title="Travelo - home">
-                        <img src="images/logo.png" alt="Travelo HTML5 Template" />
+                    <a href="#" title="Travelo - home">
+                        <img src="images/logo.png" />
                     </a>
                 </div>
                 <div class="pull-right">
-                    <a id="back-to-top" href="#" class="animated" data-animation-type="bounce"><i class="soap-icon-longarrow-up circle"></i></a>
+                    <a id="back-to-top"   class="animated" data-animation-type="bounce"><i class="soap-icon-longarrow-up circle"></i></a>
                 </div>
                 <div class="copyright pull-right">
-                    <p>&copy; 2014 Travelo</p>
+                    <p>&copy; 2014 Market Place</p>
                 </div>
             </div>
         </div>
