--- a/src/app/views/account/dashboard/dashboard.html
+++ b/src/app/views/account/dashboard/dashboard.html
@@ -4,7 +4,7 @@
 <br />
 <div class="row block">
     <div class="col-sm-6 col-md-3">
-        <a href="hotel-list-view.html">
+        <a>
             <div class="fact blue">
                 <div class="numbers counters-box">
                     <dl>
@@ -21,7 +21,7 @@
         </a>
     </div>
     <div class="col-sm-6 col-md-3">
-        <a href="flight-list-view.html">
+        <a >
             <div class="fact yellow">
                 <div class="numbers counters-box">
                     <dl>
@@ -38,7 +38,7 @@
         </a>
     </div>
     <div class="col-sm-6 col-md-3">
-        <a href="car-list-view.html">
+        <a >
             <div class="fact red">
                 <div class="numbers counters-box">
                     <dl>
@@ -55,7 +55,7 @@
         </a>
     </div>
     <div class="col-sm-6 col-md-3">
-        <a href="cruise-list-view.html">
+        <a >
             <div class="fact green">
                 <div class="numbers counters-box">
                     <dl>
@@ -87,42 +87,42 @@
 <div class="row block">
     <div class="col-md-6 notifications">
         <h2>Notifications</h2>
-        <a href="#">
+        <a  >
             <div class="icon-box style1 fourty-space">
                 <i class="soap-icon-status takeoff-effect yellow-bg"></i>
                 <span class="time pull-right">JUST NOW</span>
                 <p class="box-title">Payment Made <span class="price">$120</span></p>
             </div>
         </a>
-        <a href="#">
+        <a  >
             <div class="icon-box style1 fourty-space">
                 <i class="soap-icon-status blue-bg"></i>
                 <span class="time pull-right">10 Mins ago</span>
                 <p class="box-title">Payment Due <span class="price">$247</span></p>
             </div>
         </a>
-        <a href="#">
+        <a  >
             <div class="icon-box style1 fourty-space">
                 <i class="soap-icon-baggage-5 red-bg"></i>
                 <span class="time pull-right">39 Mins ago</span>
                 <p class="box-title">Equipment Left the source <span class="price">Track here</span></p>
             </div>
         </a>
-        <a href="#">
+        <a  >
             <div class="icon-box style1 fourty-space">
                 <i class="soap-icon-status takeoff-effect yellow-bg"></i>
                 <span class="time pull-right">JUST NOW</span>
                 <p class="box-title">Payment Made <span class="price">$120</span></p>
             </div>
         </a>
-        <a href="#">
+        <a  >
             <div class="icon-box style1 fourty-space">
                 <i class="soap-icon-status blue-bg"></i>
                 <span class="time pull-right">10 Mins ago</span>
                 <p class="box-title">Payment Due <span class="price">$247</span></p>
             </div>
         </a>
-        <a href="#">
+        <a  >
             <div class="icon-box style1 fourty-space">
                 <i class="soap-icon-baggage-5 red-bg"></i>
                 <span class="time pull-right">39 Mins ago</span>
@@ -131,7 +131,7 @@
         </a>
 
 
-        <a href="#">
+        <a  >
             <div class="load-more">. . . . . . . . . . . . . </div>
         </a>
     </div>
@@ -140,7 +140,7 @@
         <div class="recent-activity">
             <ul>
                 <li>
-                    <a href="#">
+                    <a  >
                         <i class="icon soap-icon-shopping-2 circle takeoff-effect yellow-color"></i>
                         <span class="price"><small>You paid</small>$120</span>
                         <h4 class="box-title">
@@ -149,7 +149,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a  >
                         <i class="icon soap-icon-shopping-2 circle red-color"></i>
                         <span class="price"><small>per day</small>$45.39</span>
                         <h4 class="box-title">
@@ -158,7 +158,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a  >
                         <i class="icon soap-icon-shopping-2 circle green-color"></i>
                         <span class="price"><small>from</small>$578</span>
                         <h4 class="box-title">
@@ -167,7 +167,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a  >
                         <i class="icon soap-icon-shopping-2 circle blue-color"></i>
                         <span class="price"><small>Avg/night</small>$620</span>
                         <h4 class="box-title">
@@ -176,7 +176,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a  >
                         <i class="icon soap-icon-shopping-2 circle red-color"></i>
                         <span class="price"><small>per day</small>$45.39</span>
                         <h4 class="box-title">
@@ -185,7 +185,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a  >
                         <i class="icon soap-icon-shopping-2 circle green-color"></i>
                         <span class="price"><small>from</small>$578</span>
                         <h4 class="box-title">
@@ -194,7 +194,7 @@
                     </a>
                 </li>
             </ul>
-            <a href="#" class="button green btn-small full-width">VIEW ALL BOOKINGS</a>
+            <a   class="button green btn-small full-width">VIEW ALL BOOKINGS</a>
         </div>
     </div>
 </div>
@@ -203,32 +203,32 @@
     <div class="col-md-4">
         <h4>Benefits of Marketplace Account</h4>
         <ul class="benefits triangle hover">
-            <li><a href="#">Faster bookings with lesser clicks</a></li>
-            <li><a href="#">Track Equipment history &amp; manage Reservations</a></li>
-            <li><a href="#">Manage profile &amp; personalize experience</a></li>
-            <li><a href="#">Receive alerts &amp; equipment recommendations</a></li>
+            <li><a>Faster bookings with lesser clicks</a></li>
+            <li><a>Track Equipment history &amp; manage Reservations</a></li>
+            <li><a>Manage profile &amp; personalize experience</a></li>
+            <li><a>Receive alerts &amp; equipment recommendations</a></li>
         </ul>
     </div>
     <div class="col-md-4 previous-bookings image-box style14">
         <h4>Your Previous Bookings</h4>
         <article class="box">
             <figure class="no-padding">
-                <a title="" href="#">
+                <a title=""  >
                     <img alt="" src="http://placehold.it/63x59" width="63" height="59">
                 </a>
             </figure>
             <div class="details">
-                <h5 class="box-title"><a href="#">Caterpillar Equipment</a><small class="fourty-space"><span class="price">$350</span></small></h5>
+                <h5 class="box-title"><a  >Caterpillar Equipment</a><small class="fourty-space"><span class="price">$350</span></small></h5>
             </div>
         </article>
         <article class="box">
             <figure class="no-padding">
-                <a title="" href="#">
+                <a title=""  >
                     <img alt="" src="http://placehold.it/63x59" width="63" height="59">
                 </a>
             </figure>
             <div class="details">
-                <h5 class="box-title"><a href="#">Caterpillar Equipment</a><small class="fourty-space"><span class="price">$260</span></small></h5>
+                <h5 class="box-title"><a  >Caterpillar Equipment</a><small class="fourty-space"><span class="price">$260</span></small></h5>
             </div>
         </article>
     </div>
@@ -239,7 +239,7 @@
             <address class="contact-details">
                 <span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-MKTPLACE</span>
                 <br>
-                <a class="contact-email" href="#">help@marketplace.com</a>
+                <a class="contact-email"  >help@marketplace.com</a>
             </address>
         </div>
     </div>
