--- a/src/app/views/account/profile/view/view.html
+++ b/src/app/views/account/profile/view/view.html
@@ -1,7 +1,7 @@
 <div class="view-profile">
     <article class="image-box style2 box innerstyle personal-details">
         <figure>
-            <a title="" href="#"><img width="270" height="263" alt="" src="http://placehold.it/270x263"></a>
+            <a title=""  ><img width="270" height="263" alt="" src="http://placehold.it/270x263"></a>
         </figure>
         <div class="details">
             <a ui-sref="main.account.profile.edit" class="button btn-mini pull-right edit-profile-btn">EDIT PROFILE</a>
@@ -23,37 +23,37 @@
     <div class="suggestions image-carousel style2" data-animation="slide" data-item-width="170" data-item-margin="22">
         <ul class="slides">
             <li>
-                <a href="#" class="hover-effect">
+                <a class="hover-effect">
                     <img src="http://placehold.it/170x170" alt="" />
                 </a>
                 <h5 class="caption">Adventure</h5>
             </li>
             <li>
-                <a href="#" class="hover-effect">
+                <a   class="hover-effect">
                     <img src="http://placehold.it/170x170" alt="" />
                 </a>
                 <h5 class="caption">Beaches &amp; Sun</h5>
             </li>
             <li>
-                <a href="#" class="hover-effect">
+                <a   class="hover-effect">
                     <img src="http://placehold.it/170x170" alt="" />
                 </a>
                 <h5 class="caption">Casinos</h5>
             </li>
             <li>
-                <a href="#" class="hover-effect">
+                <a   class="hover-effect">
                     <img src="http://placehold.it/170x170" alt="" />
                 </a>
                 <h5 class="caption">Family Fun</h5>
             </li>
             <li>
-                <a href="#" class="hover-effect">
+                <a   class="hover-effect">
                     <img src="http://placehold.it/170x170" alt="" />
                 </a>
                 <h5 class="caption">History</h5>
             </li>
             <li>
-                <a href="#" class="hover-effect">
+                <a   class="hover-effect">
                     <img src="http://placehold.it/170x170" alt="" />
                 </a>
                 <h5 class="caption">Adventure</h5>
@@ -65,32 +65,32 @@
         <div class="col-md-4">
             <h4>Benefits of Tavelo Account</h4>
             <ul class="benefits triangle hover">
-                <li><a href="#">Faster bookings with lesser clicks</a></li>
-                <li><a href="#">Track travel history &amp; manage bookings</a></li>
-                <li class="active"><a href="#">Manage profile &amp; personalize experience</a></li>
-                <li><a href="#">Receive alerts &amp; recommendations</a></li>
+                <li><a  >Faster bookings with lesser clicks</a></li>
+                <li><a  >Track travel history &amp; manage bookings</a></li>
+                <li class="active"><a  >Manage profile &amp; personalize experience</a></li>
+                <li><a  >Receive alerts &amp; recommendations</a></li>
             </ul>
         </div>
         <div class="col-md-4 previous-bookings image-box style14">
             <h4>Your Previous Bookings</h4>
             <article class="box">
                 <figure class="no-padding">
-                    <a title="" href="#">
+                    <a title=""  >
                         <img alt="" src="http://placehold.it/63x59" width="63" height="59">
                     </a>
                 </figure>
                 <div class="details">
-                    <h5 class="box-title"><a href="#">Half-Day Island Tour</a><small class="fourty-space"><span class="price">$35</span> Family Package</small></h5>
+                    <h5 class="box-title"><a  >Half-Day Island Tour</a><small class="fourty-space"><span class="price">$35</span> Family Package</small></h5>
                 </div>
             </article>
             <article class="box">
                 <figure class="no-padding">
-                    <a title="" href="#">
+                    <a title=""  >
                         <img alt="" src="http://placehold.it/63x59" width="63" height="59">
                     </a>
                 </figure>
                 <div class="details">
-                    <h5 class="box-title"><a href="#">Ocean Park Tour</a><small class="fourty-space"><span class="price">$26</span> Per Person</small></h5>
+                    <h5 class="box-title"><a  >Ocean Park Tour</a><small class="fourty-space"><span class="price">$26</span> Per Person</small></h5>
                 </div>
             </article>
         </div>
@@ -101,7 +101,7 @@
                 <address class="contact-details">
                     <span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-HELLO</span>
                     <br>
-                    <a class="contact-email" href="#">help@travelo.com</a>
+                    <a class="contact-email"  >help@travelo.com</a>
                 </address>
             </div>
         </div>
