--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -48,9 +48,10 @@
 
 
                         </div>
-                        <div class="col-xs-3">
+                        <div class="col-xs-3" style="border: 1px solid #dbdbdb;">
 
-                            <select class="form-control full-width white-bg">
+                            <select class="form-control full-width white-bg"
+                                    style="height: 32px;border-radius: 0px;border: 0px;box-shadow: none;">
                                 <option>Rent</option>
                                 <option>Buy</option>
                             </select>
