Footer updates and footer logo added

--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -90,47 +90,30 @@
                     <div class="col-sm-6 col-md-3">
                         <h2>Discover</h2>
                         <ul class="discover triangle hover row">
-                            <li class="col-xs-6"><a  >Safety</a></li>
-                            <li class="col-xs-6"><a  >About</a></li>
-                            <li class="col-xs-6"><a  >Travelo Picks</a></li>
-                            <li class="col-xs-6"><a  >Latest Jobs</a></li>
-                            <li class="active col-xs-6"><a  >Mobile</a></li>
-                            <li class="col-xs-6"><a  >Press Releases</a></li>
-                            <li class="col-xs-6"><a  >Why Host</a></li>
-                            <li class="col-xs-6"><a  >Blog Posts</a></li>
-                            <li class="col-xs-6"><a  >Social Connect</a></li>
-                            <li class="col-xs-6"><a  >Help Topics</a></li>
-                            <li class="col-xs-6"><a  >Site Map</a></li>
-                            <li class="col-xs-6"><a  >Policies</a></li>
+                            <li class="col-xs-6"><a>Equipments</a></li>
+                            <li class="col-xs-6"><a>Power Systems</a></li>
+                            <li class="col-xs-6"><a>Travelo Picks</a></li>
+                            <li class="col-xs-6"><a>Attachments</a></li>
+                            <li class="active col-xs-6"><a>Speciality Rentals</a></li>
+                            <li class="col-xs-6"><a>Industry Solutions</a></li>
+                            <li class="col-xs-6"><a>Insurance</a></li>
+                            <li class="col-xs-6"><a>Technology</a></li>
+                            <li class="col-xs-6"><a>API Access</a></li>
+                            <li class="col-xs-6"><a>Operate Safety</a></li>
+                            <li class="col-xs-6"><a>Maintenance</a></li>
+                            <li class="col-xs-6"><a>Support</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6 col-md-3">
-                        <h2>Travel News</h2>
-                        <ul class="travel-news">
-                            <li>
-                                <div class="thumb">
-                                    <a  >
-                                        <img src="http://placehold.it/63x63" alt="" width="63" height="63" />
-                                    </a>
-                                </div>
-                                <div class="description">
-                                    <h5 class="s-title"><a  >Amazing Places</a></h5>
-                                    <p>Purus ac congue arcu cursus ut vitae pulvinar massaidp.</p>
-                                    <span class="date">25 Sep, 2013</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="thumb">
-                                    <a  >
-                                        <img src="http://placehold.it/63x63" alt="" width="63" height="63" />
-                                    </a>
-                                </div>
-                                <div class="description">
-                                    <h5 class="s-title"><a  >Travel Insurance</a></h5>
-                                    <p>Purus ac congue arcu cursus ut vitae pulvinar massaidp.</p>
-                                    <span class="date">24 Sep, 2013</span>
-                                </div>
-                            </li>
+                        <h2>News and Events</h2>
+
+                        <ul class="discover triangle hover row">
+                            <li class="col-xs-6"><a>Announcements</a></li>
+                            <li class="col-xs-6"><a>Press Kits</a></li>
+                            <li class="col-xs-6"><a>Travelo Picks</a></li>
+                            <li class="col-xs-6"><a>Trade shows</a></li>
+                            <li class="active col-xs-6"><a>Sell with Us</a></li>
+                            <li class="active col-xs-6"><a>Blog</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-6 col-md-3">
@@ -144,13 +127,13 @@
                         <span>We respect your privacy</span>
                     </div>
                     <div class="col-sm-6 col-md-3">
-                        <h2>About Travelo</h2>
-                        <p>Nunc cursus libero purus ac congue arcu cursus ut sed vitae pulvinar massaidp nequetiam lore elerisque.</p>
+                        <h2>About Marketplace</h2>
+                        <p>Marketplace brings you a modern, comfortable and easy way to rent, buy and sell equipments online.</p>
                         <br />
                         <address class="contact-details">
-                            <span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-HELLO</span>
+                            <span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-0000</span>
                             <br />
-                            <a   class="contact-email">help@travelo.com</a>
+                            <a   class="contact-email">help@marketplace.com</a>
                         </address>
                         <ul class="social-icons clearfix">
                             <li class="twitter"><a title="twitter"  ><i class="soap-icon-twitter"></i></a></li>
@@ -169,7 +152,7 @@
             <div class="container">
                 <div class="logo pull-left">
                     <a href="#" title="Travelo - home">
-                        <img src="images/logo.png" />
+                        <img src="assets/images/logo.png" />
                     </a>
                 </div>
                 <div class="pull-right">
